--- a/index.html
+++ b/index.html
@@ -5,54 +5,49 @@
     <title>Log In</title>
     <meta charset="utf-8">
     <script type="text/javascript" src="js/script.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/login.css" />
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
-    
+
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
 <body>
-    <div class="had-container">
-        <div class="parallax-container logueo">
-            <div class="row"><br>
-                <div class="col m8 s8 offset-m2 offset-s2 center">
-                    <h4 class="truncate bg-card-user">
-                        <div id="usuario-login">
-                            <img src="img/login-icon.png" alt="" class="circle responsive-img">
+
+    <div class="logueo valign-wrapper container">
+        <div class="row">
+            <div class="col s12 m6 offset-m3 center">
+                <div class="row login">
+                    <div id="usuario-login" class="col s12">
+                        <img src="img/login-icon.png" alt="" class="circle responsive-img">
+                    </div>
+                    <h4 class="col s12">Inicia sesión.</h4>
+                    <form class="col s12">
+                        <div class="row">
+                            <div class="input-field col m12 s12">
+                                <i class="material-icons iconis prefix">account_box</i>
+                                <input id="icon_prefix" type="text" class="validate">
+                                <label for="icon_prefix">Nombre o Email</label>
+                            </div>
+                            <div class="input-field col m12 s12">
+                                <i class="material-icons iconis prefix">enhanced_encryption</i>
+                                <input id="password" type="password" class="validate">
+                                <label for="password">Contraseña</label>
+                            </div>
                         </div>
-                        <div class="row login">
-                            <h4>Inicia sesión.</h4>
-                            <form class="col s12">
-                                <div class="row">
-                                    <div class="input-field col m12 s12">
-                                        <i class="material-icons iconis prefix">account_box</i>
-                                        <input id="icon_prefix" type="text" class="validate">
-                                        <label for="icon_prefix">Nombre o Email</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="input-field col m12 s12">
-                                        <i class="material-icons iconis prefix">enhanced_encryption</i>
-                                        <input id="password" type="password" class="validate">
-                                        <label for="password">Contraseña</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <button class="btn waves-effect waves-light" type="submit" name="action">Iniciar
-                                        sesión!</button>
-                                </div>
-                            </form>
+                        <div class="row">
+                            <button class="btn waves-effect waves-light light-green lighten-1" type="submit" name="action">Iniciar sesión</button>
                         </div>
-                    </h4>
+                    </form>
                 </div>
+
             </div>
         </div>
-    </div>  
+
     </div>
 
 
