--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <img src="img/login-icon.png" alt="" class="circle responsive-img">
                     </div>
                     <h4 class="col s12">Inicia sesión.</h4>
-                    <form class="col s12">
+                    <form class="col s12" action="reservarTaula.html">
                         <div class="row">
                             <div class="input-field col m12 s12">
                                 <i class="material-icons iconis prefix">account_box</i>
@@ -40,7 +40,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <button class="btn waves-effect waves-light light-green lighten-1" type="submit" name="action">Iniciar sesión</button>
+                            <button
+                                class="btn waves-effect waves-light light-green lighten-1"
+                                type="submit" 
+                                name="action"
+                            >Iniciar sesión</button>
                         </div>
                     </form>
                 </div>
