Añadidas varias mesas en la reserva

--- a/reservarTaula.html
+++ b/reservarTaula.html
@@ -33,7 +33,7 @@
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancelar</a>
         </div>
     </div>
-
+<!--  -->
     <!-- Contenido tabla -->
     <div class="container">
         <div class="row listadoMesas">
@@ -43,11 +43,100 @@
                     <div class="card-content white-text">
                         <span class="card-title">Mesa 1</span>
                         <p class="textoDisponible">Disponible</p>
-                        <p class="comensales">0</p>
+                        <p class="comensales">
+                            Comensales: <span class="cantidadComensales">0</span>
+                        </p>
                     </div>
                     <div class="card-action">
                         <a href="#modalConfirmar" onclick="prepararReserva(1)" class="btn-reservar btn modal-trigger">Reservar</a>
                         <a href="#!" onclick="cancelarMesa(1)" class="btn-cancelar">Cancelar reserva</a>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Mesa 2 -->
+            <div class="col s12 m6">
+                <div class="card disponible" id="mesa-2">
+                    <div class="card-content white-text">
+                        <span class="card-title">Mesa 2</span>
+                        <p class="textoDisponible">Disponible</p>
+                        <p class="comensales">
+                            Comensales: <span class="cantidadComensales">0</span>
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#modalConfirmar" onclick="prepararReserva(2)" class="btn-reservar btn modal-trigger">Reservar</a>
+                        <a href="#!" onclick="cancelarMesa(2)" class="btn-cancelar">Cancelar reserva</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row listadoMesas">
+            <!-- Mesa 3 -->
+            <div class="col s12 m6">
+                <div class="card disponible" id="mesa-3">
+                    <div class="card-content white-text">
+                        <span class="card-title">Mesa 3</span>
+                        <p class="textoDisponible">Disponible</p>
+                        <p class="comensales">
+                            Comensales: <span class="cantidadComensales">0</span>
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#modalConfirmar" onclick="prepararReserva(3)" class="btn-reservar btn modal-trigger">Reservar</a>
+                        <a href="#!" onclick="cancelarMesa(3)" class="btn-cancelar">Cancelar reserva</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mesa 4 -->
+            <div class="col s12 m6">
+                <div class="card disponible" id="mesa-4">
+                    <div class="card-content white-text">
+                        <span class="card-title">Mesa 4</span>
+                        <p class="textoDisponible">Disponible</p>
+                        <p class="comensales">
+                            Comensales: <span class="cantidadComensales">0</span>
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#modalConfirmar" onclick="prepararReserva(4)" class="btn-reservar btn modal-trigger">Reservar</a>
+                        <a href="#!" onclick="cancelarMesa(4)" class="btn-cancelar">Cancelar reserva</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row listadoMesas">
+            <!-- Mesa 5 -->
+            <div class="col s12 m6">
+                <div class="card disponible" id="mesa-5">
+                    <div class="card-content white-text">
+                        <span class="card-title">Mesa 5</span>
+                        <p class="textoDisponible">Disponible</p>
+                        <p class="comensales">
+                            Comensales: <span class="cantidadComensales">0</span>
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#modalConfirmar" onclick="prepararReserva(5)" class="btn-reservar btn modal-trigger">Reservar</a>
+                        <a href="#!" onclick="cancelarMesa(5)" class="btn-cancelar">Cancelar reserva</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mesa 6 -->
+            <div class="col s12 m6">
+                <div class="card disponible" id="mesa-6">
+                    <div class="card-content white-text">
+                        <span class="card-title">Mesa 6</span>
+                        <p class="textoDisponible">Disponible</p>
+                        <p class="comensales">
+                            Comensales: <span class="cantidadComensales">0</span>
+                        </p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#modalConfirmar" onclick="prepararReserva(6)" class="btn-reservar btn modal-trigger">Reservar</a>
+                        <a href="#!" onclick="cancelarMesa(6)" class="btn-cancelar">Cancelar reserva</a>
                     </div>
                 </div>
             </div>
