Todo actualizado y funcional

--- a/reservarTaula.html
+++ b/reservarTaula.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -33,7 +35,7 @@
             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancelar</a>
         </div>
     </div>
-<!--  -->
+    <!--  -->
     <!-- Contenido tabla -->
     <div class="container">
         <div class="row listadoMesas">
@@ -53,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- Mesa 2 -->
             <div class="col s12 m6">
                 <div class="card disponible" id="mesa-2">
@@ -141,6 +143,13 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <a href="pedidos.html">
+                <button class="btn waves-effect waves-light" type="submit" name="action">Continua
+                    <i class="material-icons right">send</i>
+                </button>
+            </a>
+        </div>
     </div>
 
 
@@ -150,8 +159,3 @@
 </body>
 
 </html>
-
-<!-- light-green lighten-1  boton
-light-green lighten-5 libre
-
-orange lighten-2 seleccionada -->
