--- a/factura.html
+++ b/factura.html
@@ -29,13 +29,15 @@
                     <h3 class="col s12">Método de pago</h3>
                     <form action="index.html" class="col s12">
                         <div class="row">
-                            <button class="btn-large waves-effect waves-light" type="submit" name="action">Efectivo
-                                <i class="material-icons right">euro_symbol</i>
-                            </button>
+                            <div class="col s12 m6">
+                                <button class="btn-large waves-effect waves-light" type="submit" name="action">Efectivo
+                                    <i class="material-icons right">euro_symbol</i>
+                                </button>
 
-                            <button class="btn-large waves-effect waves-light" type="submit" name="action">Tarjeta
-                                <i class="material-icons right">credit_card</i>
-                            </button>
+                                <button class="btn-large waves-effect waves-light" type="submit" name="action">Tarjeta
+                                    <i class="material-icons right">credit_card</i>
+                                </button>
+                            </div>
                         </div>
                     </form>
                 </div>
