--- a/menu_del_dia.html
+++ b/menu_del_dia.html
@@ -48,17 +48,19 @@
                 </div>
             </div>
             <div class="row">
-                <a href="pedidos.html">
-                    <button class="btn waves-effect waves-light left">Atrás
-                        <i class="material-icons right">cancel</i>
-                    </button>
-                </a>
+                <div class="col s12 m6">
+                    <a href="pedidos.html">
+                        <button class="btn waves-effect waves-light left">Atrás
+                            <i class="material-icons right">cancel</i>
+                        </button>
+                    </a>
 
-                <a href="pedidos.html">
-                    <button class="btn waves-effect waves-light right" type="submit" name="action">Seleccionar el menú
-                        <i class="material-icons right">local_dining</i>
-                    </button>
-                </a>
+                    <a href="pedidos.html">
+                        <button class="btn waves-effect waves-light right" type="submit" name="action">Seleccionar
+                            <i class="material-icons right">local_dining</i>
+                        </button>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
@@ -66,4 +68,5 @@
     <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
+
 </html>
